# bridge-builder

./: AGENTS.md  README.md  main.py  pyproject.toml
.agents/skills/bridge-builder-delegate/: SKILL.md
.claude/commands/: bridge-builder.md
codex-skills/bridge-builder-delegate/: SKILL.md
