[project]
name = "bridge-builder"
version = "0.1.0"
description = "Local FastMCP server that runs a Codex-based two-agent pipeline"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp",
]

[project.scripts]
bridge-builder = "main:main"

[tool.ruff]
line-length = 80

[tool.ruff.lint]
select = ["I"]

[dependency-groups]
dev = [
    "ruff>=0.15.10",
    "ty>=0.0.29",
]
